[package]
name = "weaver-renderer-js"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WASM bindings for weaver-renderer"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["syntax-highlighting"]
syntax-highlighting = ["weaver-renderer/syntax-highlighting"]

[dependencies]
weaver-renderer = { path = "../weaver-renderer", default-features = false }
weaver-common = { path = "../weaver-common" }
weaver-api = { path = "../weaver-api" }
jacquard = { workspace = true, default-features = false }
markdown-weaver = { workspace = true }
markdown-weaver-escape = { workspace = true }

wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
tsify-next = "0.5"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[package.metadata.wasm-pack.profile.dev]
# Disable wasm-opt (default for dev)
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
# Enable with size optimization
wasm-opt = ['-Oz', '--enable-bulk-memory-opt', '--enable-nontrapping-float-to-int']
