[package]
name = "weaver-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
n0-future = { workspace = true }
atrium-api = { version = "0.25.3", default-features = false }

weaver-common = { path = "../weaver-common" }

weaver-workspace-hack = { version = "0.1", path = "../weaver-workspace-hack" }
compact_string = "0.1.0"
http = "1.3.1"
url = "2.5.4"
