[package]
name = "weaver-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
n0-future.workspace = true
weaver-common = { path = "../weaver-common" }
weaver-api = { path = "../weaver-api" }
jacquard.workspace = true
markdown-weaver = { workspace = true }
http = "1.3.1"
url = "2.5.4"
syntect = { workspace = true, default-features = false, features = ["default-fancy"]}
markdown-weaver-escape = { workspace = true, features = ["std"] }
thiserror.workspace = true
tracing.workspace = true
miette.workspace = true
unicode-normalization = "0.1.24"
yaml-rust2 = { version = "0.10.2" }
bitflags = "2.9.1"
dashmap = "6.1.0"
pin-utils = "0.1.0"
pin-project = "1.1.10"
smol_str = { version = "0.3", features = ["serde"] }
pulldown-latex = "0.6"
mime-sniffer = "0.1.3"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
regex = { version = "1.12" }
tokio = { version = "1.28", features = ["rt", "time"] }
tokio-util = { version = "0.7.14", features = ["rt"] }
ignore = "0.4.23"

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
regex-lite = { version = "0.1" }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }
