[package]
name = "weaver-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "weaver-server"
path = "src/main.rs"

[lib]
name = "weaver_server"
path = "src/lib.rs"

[dependencies]
weaver-common = { path = "../weaver-common" }
weaver-workspace-hack = { version = "0.1", path = "../weaver-workspace-hack" }

axum = "0.8"
tokio = { version = "1.44", features = ["full"] }
notify = "8.0"

clap = { version = "4.5", features = ["derive", "env", "cargo", "unicode"] }
