[package]
name = "weaver-server"
version = "0.1.0"
authors = ["Orual <orual@nonbinary.computer>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.1.0"
dioxus = { version = "0.7.0", features = ["router", "fullstack"] }
weaver-common = { path = "../weaver-common" }
jacquard = { workspace = true, features = ["streaming"] }
jacquard-axum = { workspace = true, optional = true }
weaver-api = { path = "../weaver-api", features = ["streaming"] }
markdown-weaver = { workspace = true }
moka = { version = "0.12", features = ["future"], optional = true }
mini-moka = { version = "0.10" }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server", "dep:jacquard-axum", "dep:moka"]
