[package]
name = "weaver-server"
version = "0.1.0"
authors = ["Orual <orual@nonbinary.computer>"]
edition = "2021"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web", "chrono/wasmbind"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server", "dep:jacquard-axum", "dep:axum"]

[dependencies]
dashmap = "6.1.0"
dioxus = { version = "0.7.0", features = ["router", "fullstack"] }
weaver-common = { path = "../weaver-common" }
jacquard = { workspace = true, features = ["streaming"] }
jacquard-axum = { workspace = true, optional = true }
weaver-api = { path = "../weaver-api", features = ["streaming"] }
markdown-weaver = { workspace = true }
weaver-renderer = { path = "../weaver-renderer" }
mini-moka = { git = "https://github.com/moka-rs/mini-moka", rev = "da864e849f5d034f32e02197fee9bb5d5af36d3d" }
#dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
axum = {version = "0.8.6", optional = true}

chrono = { version = "0.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
time = { version = "0.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
mini-moka = { git = "https://github.com/moka-rs/mini-moka", rev = "da864e849f5d034f32e02197fee9bb5d5af36d3d", features = ["js"] }
